1999-09-03  Andreas Schwab  <schwab@suse.de>

	* ptfork.c (__fork): Renamed from fork and use __libc_fork.  Add
	fork as weak alias.
	(__vfork): New function, alias vfork.
	* Versions: Export __fork, vfork, and __vfork in libpthread.

1999-08-23  Andreas Schwab  <schwab@suse.de>

	* signals.c (pthread_sighandler): Add SIGCONTEXT_EXTRA_ARGS to
	call to signal handler.

1999-08-20  Ulrich Drepper  <drepper@cygnus.com>

	* pthread.c (__pthread_reset_main_thread): Undo last change.
	(__pthread_kill_other_threads_np): Reset signal handlers for the
	signals we used in the thread implementation here.

1999-08-19  Ulrich Drepper  <drepper@cygnus.com>

	* pthread.c (__pthread_reset_main_thread): Reset signal handlers
	for the signals we used in the thread implementation [PR libc/1234].

	* Versions: Export __pthread_kill_other_threads_np from libpthread
	for GLIBC_2.1.2.

	* signals.c: Pass sigcontext through wrapper to the user function.

1999-08-01  Ulrich Drepper  <drepper@cygnus.com>

	* Versions [ld.so] (GLIBC_2.0): Export __libc_internal_tsd_get and
	__libc_internal_tsd_set.

1999-07-29  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* manager.c: Remove inclusion of <linux/tasks.h> since it's not
	needed anymore.

1999-07-16  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* internals.h: Align _pthread_descr_struct to 32 bytes.
	Reported by Tim Hockin <thockin@cobaltnet.com>, close PR
	libc/1206.

1999-07-09  Ulrich Drepper  <drepper@cygnus.com>

	* oldsemaphore.c (sem_compare_and_swap): Fix use of compare and
	swap function.

1999-07-09  Cristian Gafton  <gafton@redhat.com>

	* Makefile (libpthread-routines): Add oldsemaphore routine.
	* Versions: Add sem_destroy, sem_getvalue, sem_init, sem_post,
	sem_trywait, and sem_wait to GLIBC_2.1.
	* oldsemaphore.c: New file.
	* semaphore.c: Add default_symbol_versions for the changed functions.
	(__new_sem_init): Rename from sem_init.
	(__new_sem_post): Rename from sem_post.
	(__new_sem_wait): Rename from sem_wait.